syntax = "proto3";

package spine.validation.java;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.validation.java";
option java_outer_classname = "CodeProto";
option java_multiple_files = true;

import "spine/protodata/ast.proto";

// Coordinates of a code fragment.
//
// Such fragment can be a Java class or a method.
//
message FragmentCoordinates {

    int32 signature_start_line = 1;

    int32 body_start_line = 2;

    int32 body_end_line = 3;
}

// A signature of a Java method.
//
// This signature describes an instance method that returns a Protobuf-compatible value.
//
// The option of several method overloads is not supported.
//
message MethodSignature {

    // The type of the returned value.
    spine.protodata.Type return_type = 1;

    // The name of the method.
    string method_name = 2;
}
